fix(twitch-statistics): add text-align center

--- a/frontend/src/components/TwitchEvents/TwitchStatistics/style.css
+++ b/frontend/src/components/TwitchEvents/TwitchStatistics/style.css
@@ -5,6 +5,7 @@
 }
 
 .table-statistic {
+  text-align: center;
   width: 100%;
 }
 
